# Makefile.am for scanner/tools

ybin_SCRIPTS =					\
	create_printer_ppd_database		\
	autodetect_printers			\
	autodetect_print_queues			\
	determine_printer_driver_options	\
	modify_cupsd_conf			\
	cups_client_only			\
	test_device				\
	test_remote_ipp				\
	test_remote_lpd				\
	test_remote_novell			\
	test_remote_smb				\
	test_remote_socket

EXTRA_DIST = $(ybin_SCRIPTS)
