#
# Makefile.am for y2c_prnt/tools
#

ybin_SCRIPTS =			\
	test_device		\
	test_remote_lpd		\
	test_remote_ipp		\
	test_remote_socket 	\
	test_remote_smb		\
	test_remote_novell	\
	listen_remote_ipp	\
	real_resolution		\
	process_ppd_files	\
	assign_printcap_default	\
	prepare_ps_testpage.pl

EXTRA_DIST = $(ybin_SCRIPTS)
