#
# Makefile.am for y2c_prnt/src
#

yncludedir = @yncludedir@/printer

module_DATA =			\
	Printer.ycp		\
	Printerlib.ycp

ynclude_DATA =			\
	misc.ycp		\
	dialogs.ycp		\
	helps.ycp		\
	texts.ycp

client_DATA =                           \
	printer_write.ycp             \
	printer_auto.ycp              \
	printer_summary.ycp           \
	printer_proposal.ycp		\
	printer.ycp


EXTRA_DIST =				\
	$(client_DATA)			\
	$(module_DATA)                  \
	$(ynclude_DATA)


