#
# Makefile.am for y2c_prnt/src
#

yncludedir = @yncludedir@/printer

module_DATA =			\
	Printer.ycp		\
	Printerlib.ycp

ynclude_DATA =			\
	misc.ycp		\
	dialogs.ycp		\
	helps.ycp		\
	texts.ycp		\
	testpage.ycp		\
	ppds.ycp		\
	dialogs-connection.ycp	\
	helps-connection.ycp


client_DATA =                           \
	printer_auto.ycp              \
	printer_summary.ycp           \
	printer_proposal.ycp		\
	printer.ycp


EXTRA_DIST =				\
	$(client_DATA)			\
	$(module_DATA)                  \
	$(ynclude_DATA)


